# sqlite-game-stats

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: generate_erd.py
sql/: schema.sql
src/game_stats/: __init__.py  __main__.py  cli.py  db.py  main.py  pareto.py  queries.py
src/sqlite_game_stats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  conftest.py  test_cli.py  test_db.py  test_pareto.py  test_queries.py
